<resources>

    <!-- ******* -->
    <!-- GENERAL -->
    <!-- ******* -->
    <string name="app_name">myiclubonline</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">MYiCLUBonline</string>
    <string name="bank_account_type_prompt">Bank Account Type</string>
    <string name="credit_card_type_prompt">Credit Card Type</string>

    <!-- **************** -->
    <!-- SPINNER OBPTIONS -->
    <!-- **************** -->
    <string-array name="credit_cards_arrays">
        <item>Visa</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discover</item>
    </string-array>
    <string-array name="bank_accout_types_arrays">
        <item>Checking</item>
        <item>Savings</item>
    </string-array>
    
    <!-- ****** -->
    <!-- LABELS -->
    <!-- ****** -->
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_reenter_password">Re-Enter Password</string>
    <string name="label_error">Error</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_extension">Ext.</string>
    <string name="label_eventName"></string>
    <string name="label_eventDate">Date</string>
    <string name="label_eventStartTime">Start Time</string>
    <string name="label_eventEndTime">End Time</string>
    <string name="label_eventEmployeeName">Trainer</string>
    <string name="label_eventLocation">Location</string>
    <string name="label_eventEnrollment">Enrolled</string>
    <string name="label_select_date">Select a date to search for available times</string>
    <string name="label_contact_info">Contact Info</string>
    <string name="label_agreement_number">Agreement #</string>
    <string name="label_agreement_began">Agreement Began</string>
    <string name="label_down_payment">Down Payment</string>
    <string name="label_agreement_type">Agreement Type</string>
    <string name="label_auto_renew">Auto Renew</string>
    <string name="label_member_since">Member Since</string>
    <string name="label_membership_status">Membership Status</string>
    <string name="label_membership_type">Membership Type</string>
    <string name="label_membership">Membership</string>
    <string name="label_select_payment_method">Select Payment Method</string>
    <string name="label_past_due">Past Due</string>
    <string name="label_next_payment">Next Payment</string>
    <string name="label_next_payment_due">Next Payment Due</string>
    <string name="label_stored_payment_method">Stored Payment Method</string>
    <string name="label_check_in_search">Please, select start and end date to do search</string>
    <string name="label_firstName">First Name</string>
    <string name="label_lastName">Last Name</string>
    <string name="label_accountNumber">Account Number</string>
    <string name="label_bankRoutingNumber">Routing Number</string>
    <string name="label_bankAccountType">Account Type</string>
    <string name="label_paymentAmount">Amount</string>
    <string name="label_storePayment">Store Payment Method</string>
    <string name="label_expirationDate">Expiration Date</string>
    <string name="label_creditCardType">Credit Card Type</string>
    
    <!-- ******* -->
    <!-- BUTTONS -->
    <!-- ******* -->
    <string name="button_login">Sign In</string>
    <string name="button_forgot">Forgot Password?</string>
    <string name="button_reset">Reset Password</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_search">Search</string>
    <string name="button_pick_date">Select Date</string>
    <string name="button_credit_card">Credit Card</string>
    <string name="button_bank_account">Bank Account</string>

</resources>