<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/background_color" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_agreement_number"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/agreementNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_agreement_began"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/agreementBegan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_down_payment"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/downPayment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_agreement_type"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/agreementType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_auto_renew"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/autoRenew"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_membership"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_member_since"
            android:textColor="#372c24" />        

        <TextView
            android:id="@+id/memberSince"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"           
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_membership_status"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/membershipStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_membership_type"
            android:textColor="#372c24" />

        <TextView
            android:id="@+id/membershipType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />
    </LinearLayout>

</ScrollView>