<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_old_password"
            android:textColor="#372c24" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_password"
            android:textColor="#372c24" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_reenter_password"
            android:textColor="#372c24" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            style="@style/ButtonText"
			android:background="@drawable/regular_button"
            android:id="@+id/btnResetPassword"
            android:text="@string/button_reset" />
        
        <Button
            style="@style/ButtonText"
			android:background="@drawable/regular_button"
            android:id="@+id/btnCancelForgot"
            android:text="@string/button_cancel" />
    </LinearLayout>

</ScrollView>