<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dip" >

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventName"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventDate"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventStartTime"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventStartTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventEndTime"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventEndTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventEmployeeName"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventEmployeeName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventLocation"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

		<TextView
            style="@style/LabelText"		    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_eventEnrollment"
            android:textColor="#372c24" />
        <TextView
            android:id="@+id/eventEnrollment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />
    </LinearLayout>
</ScrollView>