<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/label_select_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24" />

    <Button
        android:id="@+id/pickDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/button_pick_date" />

    <Button
        android:id="@+id/searchByDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/button_search" />

</LinearLayout>