<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_color"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/storePaymentLabel"
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_storePayment"
            android:textColor="#372c24" />

        <Switch
            android:id="@+id/storePayment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textOff="Off"
            android:textOn="On" />

        <TextView
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_firstName"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/creditFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_lastName"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/creditLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_accountNumber"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/creditCardNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_creditCardType"
            android:textColor="#372c24" />

        <Spinner
            android:id="@+id/creditCardType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/credit_cards_arrays"
            android:prompt="@string/credit_card_type_prompt" />

        <TextView
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_expirationDate"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/expirationDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="date"
            android:singleLine="true" />

        <TextView
            android:id="@+id/paymentAmountLabel"
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_paymentAmount"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/paymentAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <TextView
            android:id="@+id/processDateLabel"
            style="@style/LabelText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:textIsSelectable="true"/>            

        <EditText
            android:id="@+id/processDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="date"
            android:singleLine="true" />

        <Button
            android:id="@+id/paymentActionButton"
            style="@style/ButtonText"
            android:background="@drawable/regular_button" />
    </LinearLayout>

</ScrollView>