<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_check_in_search"
            android:textColor="#372c24" />
        
        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_start_date"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/checkInStartDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:singleLine="true" 
            android:inputType="text"
            android:onClick="showDatePickerDialog" />

        <TextView
            style="@style/LabelText"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_end_date"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/checkInEndDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="textPassword"
            android:singleLine="true" 
            android:onClick="showDatePickerDialog" />

        <Button
            style="@style/ButtonText"
			android:background="@drawable/regular_button"
			android:id="@+id/btnSearch"
            android:text="@string/button_search" />
    </LinearLayout>
</ScrollView>